feat: integrar cadastro publico e modo escuro
